# get-bio-done

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml
infra/: gbd-conventions.json  gbd-protocols.json  gbd-state.json
src/gbd/: __init__.py  contracts.py
src/gbd/agents/: gbd-bibliographer.md  gbd-consistency-checker.md  gbd-debugger.md  gbd-executor.md  gbd-paper-writer.md  gbd-planner.md  gbd-referee.md  gbd-researcher.md  gbd-statistician.md  gbd-verifier.md
src/gbd/commands/: branch-hypothesis.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  verify-work.md
src/gbd/core/: config.py  constants.py  conventions.py  git_ops.py  kernel.py  phases.py  state.py
src/gbd/hooks/: statusline.py
src/gbd/mcp/: __init__.py  conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/gbd/specs/references/orchestration/: agent-delegation.md
src/gbd/specs/references/protocols/: rnaseq-protocols.md  scrna-seq-protocols.md  variant-calling-protocols.md
src/gbd/specs/references/verification/: llm-bio-errors.md
