[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-bio-done"
version = "0.1.0"
description = "AI copilot for autonomous bioinformatics research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesse Weigel", email = "jesse@jesseweigel.com" },
]
keywords = ["bioinformatics", "ai", "research", "genomics", "pipeline-verification", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JesseRWeigel/get-bio-done"
Repository = "https://github.com/JesseRWeigel/get-bio-done"
Issues = "https://github.com/JesseRWeigel/get-bio-done/issues"

[project.scripts]
gbd = "gbd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gbd"]
